# rConfig

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  pyproject.yml  python-package.yml
rConfig/: CustomTypes.py  Rsecrets.py  __init__.py  config.py  logging.py
tests/: test_config.py  test_secrets.py
