[build-system] 
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rConfig"
version = "0.1.7c"
description = "A package for configuration management with environment variables and YAML. Has a definitely creative name."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "Robert J Renode IV"}
]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["configuration", "environment variables", "YAML"]

[project.urls]
"Source Code" = "https://github.com/rrenode/rConfig"

[tool.setuptools.packages.find]
where = ["."]
include = ["rConfig*"]

[project.optional-dependencies]
default = [
    "PyYAML>=6.0.2",
    "python-dotenv>=1.0.1"
]

[tool.setuptools]
include-package-data = true
